Fix title capitalisation and weird characters problems in bibtex

--- a/carpedata.bib
+++ b/carpedata.bib
@@ -1,5 +1,5 @@
 @article{tlx,
-  title={Development of NASA-TLX (Task Load Index): Results of empirical and theoretical research},
+  title={{Development of NASA-TLX (Task Load Index): Results of empirical and theoretical research}},
   author={Hart, S.G. and Staveland, L.E.},
   journal={Human mental workload},
   volume={1},
@@ -79,7 +79,7 @@ time,...}},
 
 @MISC{Jones05towardsa,
     author = {William Jones and David Karger and Ofer Bergman and Mike Franklin and A Pratt and Marcia Bates},
-    title = {Towards a unification and integration of PIM support},
+    title = {{Towards a unification and integration of PIM support}},
     year = {2005}
 }
 @inproceedings{semex-2,
@@ -120,8 +120,8 @@ time,...}},
 }
 @INPROCEEDINGS{boardman,
     author = {Richard Boardman and Robert Spence and M. Angela Sasse},
-    title = {Too Many Hierarchies? The Daily Struggle for Control of the Workspace},
-    booktitle = {Mathematical Models”, Proceedings of the ACM CHI’96 Conference},
+    title = {{Too Many Hierarchies? The Daily Struggle for Control of the Workspace}},
+    booktitle = {Mathematical Models, Proceedings of the ACM CHI96 Conference},
     year = {2003},
     pages = {406--412},
     publisher = {ACM Press}
@@ -164,7 +164,7 @@ time,...}},
 }
 
 @article{castano2006matching,
- title={Matching ontologies in open networked systems: Techniques and applications},
+ title={{Matching ontologies in open networked systems: Techniques and applications}},
  author={Castano, S. and Ferrara, A. and Montanelli, S.},
  journal={Journal on Data Semantics V},
  pages={25--63},
@@ -207,7 +207,7 @@ time,...}},
 }
 
 @article{suchanek2011paris,
- title={PARIS: probabilistic alignment of relations, instances, and schema},
+ title={{PARIS: probabilistic alignment of relations, instances, and schema}},
  author={Suchanek, F.M. and Abiteboul, S. and Senellart, P.},
  journal={Proceedings of the VLDB Endowment},
  volume={5},
@@ -218,7 +218,6 @@ time,...}},
 }
 
 @article{citeulike:3875264,
-    abstract = {{As more and more reusable structured data appears on the Web, casual users will want to take into their own hands the task of mashing up data rather than wait for mash-up sites to be built that address exactly their individually unique needs. In this paper, we present Potluck, a Web user interface that let\&\#x2019;s casual users\&\#x2014;those without programming skills and data modeling expertise\&\#x2014;mash up data themselves. Potluck is novel in its use of drag and drop for merging fields, its integration and extension of the faceted browsing paradigm for focusing on subsets of data to align, and its application of simultaneous editing for cleaning up data syntactically. Potluck also lets the user construct rich visualizations of data in-place as the user aligns and cleans up the data. This iterative process of integrating the data while constructing useful visualizations is desirable when the user is unfamiliar with the data at the beginning\&\#x2014;a common case\&\#x2014;and wishes to get immediate value out of the data without having to spend the overhead of completely and perfectly integrating the data first. A user study on Potluck indicated that it was usable and learnable, and elicited excitement from programmers who, even with their programming skills, previously had great difficulties performing data integration.}},
     author = {Huynh, D. and Miller, R. and Karger, D.},
     citeulike-article-id = {3875264},
     citeulike-linkout-0 = {http://dx.doi.org/10.1016/j.websem.2008.09.005},
@@ -256,7 +255,7 @@ time,...}},
 
 @article{Shadbolt:2006:SWR:1155313.1155373,
  author = {Shadbolt, Nigel and Berners-Lee, Tim and Hall, Wendy},
- title = {The Semantic Web Revisited},
+ title = {{The Semantic Web Revisited}},
  journal = {IEEE Intelligent Systems},
  issue_date = {May 2006},
  volume = {21},
@@ -279,7 +278,7 @@ time,...}},
 }
 
 @inproceedings{parallax,
-  title={Parallax and companion: Set-based browsing for the data web},
+  title={{Parallax and companion: Set-based browsing for the data web}},
   author={Huynh, D.F. and Karger, D.},
   booktitle={WWW Conference. ACM},
   year={2009},
@@ -288,7 +287,7 @@ time,...}},
 
 @article{alani2007unlocking,
   title={Unlocking the potential of public sector information with semantic web technology},
-  author={Alani, H. and Dupplaw, D. and Sheridan, J. and O’Hara, K. and Darlington, J. and Shadbolt, N. and Tullo, C.},
+  author={Alani, H. and Dupplaw, D. and Sheridan, J. and O'Hara, K. and Darlington, J. and Shadbolt, N. and Tullo, C.},
   journal={The Semantic Web},
   pages={708--721},
   year={2007},
@@ -308,7 +307,7 @@ time,...}},
 
 @article{intel_mashmaker,
   author = {Ennals, Rob and Brewer, Eric and Garofalakis, Minos and Shadle, Michael and Gandhi, Prashant},
-  title = {Intel Mash Maker: join the web},
+  title = {{Intel Mash Maker: join the web}},
   journal = {SIGMOD Rec.},
   volume = {36},
   number = {4},
