--- a/chi2012.tex
+++ b/chi2012.tex
@@ -648,7 +648,9 @@ Our study had several limitations.  First, the small sample size of our study (2
 
 \section{Conclusions} %Key findings of the whole paper and its implications
 
-Just as the wise Italian in Voltaire's poem \emph{La Begueule} predicted,``the best is the enemy of the good'', we believe that the quest for complete approaches to data integration have perhaps caused more scruffy, ``ad-hoc'' approaches to be overlooked.  Based upon the results of our investigation, we believe that there are a number of advantages to user-driven data reconciliation over automatic to bespoke ones; specifically, this enables the user to combine data as part of his or her sensemaking process, using subjective judgement in the process
+Just as the wise Italian in Voltaire's poem \emph{La Begueule} predicted,``the best is the enemy of the good'', we believe that the quest for complete approaches to data integration have perhaps caused more scruffy, ``ad-hoc'' approaches to be overlooked.  Based upon the results of our investigation, we see a number of benefits to user-driven data reconciliation approaches over automatic and bespoke ones.  Specifically, letting the user freely merge and split data as part of his or her sensemaking process, gives users the power to see data combined or split up as best suited to the task
+
+ things as simple as coreference involved any subjective judgement, 
 
 %% the abililty to  In our investigation we found that complete approaches to data integration
 
