--- a/chi2012.tex
+++ b/chi2012.tex
@@ -215,8 +215,10 @@ Participants said they would organise a large social event by first conferring w
 %% Most people felt that being assertive and posting their decisions about the date and time on Facebook meant that organising events were more successful than trying to gather a consensus.  They expected that their friends would voice any objections if they could not attend or like the restaurant or activity selected.   They selected venues, locations, restaurants and activities based on their own knowledge, friend's recommendations, Google maps, reviews obtained through web search and sites such as TripAdvisor.  People stated that the cost, price and easy to get to locations were the most important factors when choosing a venue.  They considered how to get there and looked up train or bus times on the Web, or organised carpools.  When organising an event the weather was not that important because they did not trust the accuracy of predictions.  Also, their friend's preferences in price and food choices were not a priority; they would try to be inclusive but only if it meant small changes to the plan.  Choosing food and timings were often made on-the-fly, by either with the use of mobile applications or by walking past a location.
 
 \subsubsection{Summary of Findings}
-% TODO: how does this summary support the thesis of the paper?
-People said that they would like a website that could support the evolution of an event, that allowed them to post drafts of an event.  They felt that organising an event should be a process that changes over time.  Three participants said that they would like a recommendation system for places to eat and activities.  Another strong requirement was that it had to be ubiquitous so that everyone could use it because they wanted a single place to communicate with their friends.  While Facebook was the most popular social networking site for organising events, half of the participants felt that it was not the best solution and would prefer a collaborative environment.
+
+All users experienced using multiple web sites in order to complete a task, and felt that the lack of existing integration between sites hindered their ability to make informed choices. Participants felt that they did not include particular aspects of a decision because the process to investigate them would be too difficult or take too much time. 
+
+%People said that they would like a website that could support the evolution of an event, that allowed them to post drafts of an event.  They felt that organising an event should be a process that changes over time.  Three participants said that they would like a recommendation system for places to eat and activities.  Another strong requirement was that it had to be ubiquitous so that everyone could use it because they wanted a single place to communicate with their friends.  While Facebook was the most popular social networking site for organising events, half of the participants felt that it was not the best solution and would prefer a collaborative environment.
 
 \begin{table*}
 \small
@@ -255,9 +257,9 @@ weather			& weatherbug		& 8						& 2						& wu: 5, y: 5		& wu: 5, y: 5				& wu: 
 
 
 \subsection{PS.2 - Technical Challenges of Data Integration}
-Our analysis of structured data feeds started with identifying a set of candidate sources to examine.  We consulted the ProgrammableWeb API directory\footnote{ProgrammableWeb - \url{http://www.programmableweb.com/apis/directory}} list of most popular data feeds for this purpose.  To increase the variety of sources, we selected from 5 categories: social network services, retailers, online event calendars, music sites, and weather, selecting 2-5 sources from each, for a total of 20.  
+Our analysis of structured data feeds started with identifying a set of candidate sources to examine.  We consulted the ProgrammableWeb API directory\footnote{ProgrammableWeb - \url{http://www.programmableweb.com/apis/directory}} list of most popular data feeds for this purpose.  To increase the variety of sources, we selected from 5 categories: social network services, retailers, online event calendars, music sites, and weather, selecting 2--5 sources from each, for a total of 20.  
 
-For each feed, 3-5 ``typical'' records of a single type were obtained; for social networking sites this was user profiles, for retail sites this was product info, etc.
+For each feed, 3--5 ``typical'' records of a single type were obtained; for social networking sites this was user profiles, for retail sites this was product info, etc.
 %Records were located either by first querying for popular key terms using each site's keyword query API (if available), or a ``top products'' query if available.  
 For each such data record, two simple complexity metrics were computed: the \emph{average width} and \emph{average depth}.  Determining the width required first finding the appropriate level for comparison; for example, Amazon's retail product ``Item'' root record had few attributes about the actual product compared to its ``ItemAttributes'' sub-property, which was used instead. The average depth was simply the mean depth to each leaf node from the chosen comparison level.
 % This step was done manually, with an effort to select most similar components for comparison.  
@@ -270,9 +272,11 @@ Once established, equivalent properties were examined firstly for naming inconsi
 Finally, we examined equivalent fields which were incomparable for reasons other than structural or terminological differences.  These \emph{modelling differences} arose from a variety of causes, including, but not limited to: measurement unit inconsistencies, measurement method (e.g., dew point vs relative humidity), differences in scale and granularity, and mismatches in what was being modelled (``offer'' versus ``listing'').\looseness=-1
 
 \subsubsection{Results}
-Table \ref{tbl:prestudy2} shows the results of the process described.  A number of features were quite striking about the data; first, while most of the data records were small and relatively simple, nearly one in each category produced substantially larger records than the rest.  Second, looking at equivalent properties, we found overall little overlap among records; that is, except for the smallest records (which had few properties to begin with), most of the data records had more unique properties than ones in common with others.  While some of these `unique records' were primarily for internal, service-specific use (such as service-specific IDs) others were useful properties that were simply absent.  Only Spotify, out of the 4 music providers, included information about the album(s) featuring a given song.  Such omissions show us that these data APIs reflect each provider's own specific capabilities and needs, and suggests that integrating information from multiple sources may allow more complete and useful representations to be assembled.
+Table \ref{tbl:prestudy2} shows the raw results of the process described.  A number of features were quite striking about the data; First, while most of the data records were small and relatively simple, nearly one in each category produced substantially more complex records than the rest. In particular, Amazon, Soundcloud, Twitter and Weather Underground stood out in their respective categories.
 
-The third finding is that equivalent properties were only rarely given the same name.  Thus, terminological heterogeneity was prevalent across data records we observed.  Structural heterogeneity, however, was comparatively rare, with the most common case being similar to the birthday example above; a leaf property on one record modelled as a subtree in the other.  We also encountered only 2 examples where data was nested in textual description fields, both from records in the Weather category, which hints their intended use in RSS feed readers rather than in structured database applications.  Examples of modelling/semantic heterogeneity instances were rarer than those of structural heterogeneity, with the few we found mostly being attributed to concepts on one site not mapping perfectly to those of another site, and mismatches in units of measurement (commonly found in the Weather forecast measurements).
+Looking at equivalent properties, we found overall little overlap among records; that is, except for the smallest records (which had few properties to begin with), most of the data records had more unique properties than ones in common with others.  While some of these `unique records' were primarily for internal, service-specific use (such as service-specific IDs) others were useful properties that were simply absent.  Only Spotify, out of the 4 music providers, included information about the album(s) featuring a given song.  Such omissions show us that these data APIs reflect each provider's own specific capabilities and needs, and suggests that integrating information from multiple sources may allow more complete and useful representations to be assembled.
+
+The second finding is that equivalent properties were only rarely given the same name.  Thus, terminological heterogeneity was prevalent across data records we observed.  Structural heterogeneity, however, was comparatively rare, with the most common case being similar to the birthday example above; a leaf property on one record modelled as a subtree in the other.  We also encountered only 2 examples where data was nested in textual description fields, both from records in the Weather category, which hints their intended use in RSS feed readers rather than in structured database applications.  Examples of modelling/semantic heterogeneity instances were rarer than those of structural heterogeneity, with the few we found mostly being attributed to concepts on one site not mapping perfectly to those of another site, and mismatches in units of measurement (commonly found in the Weather forecast measurements).
 
 Although not included in the table above, we also examined the source schemas of many of the data sources for property enumerated type values.  There was substantial terminological inconsistency among such values, but also cases where some sources had values not represented in the other source's sets.  For example, the property ``gender''  on Facebook allowed only supported ``male'' and ``female'' for values, while Google+ included a third option,``other''.  ``Relationship status'' was another which was similarly complex, as none of the string representations of enumerated value sets matched across data sources perfectly.
 
