Task preparation cut down redundancy

--- a/chi2012.tex
+++ b/chi2012.tex
@@ -398,10 +398,11 @@ We based our two tasks on choosing a university and picking a restaurant for a l
 
 \subsubsection{Task preparation}
 % how data was prepared for each of the tasks; exactly how the A condition was done (full screen DP in a web browser, no outside access to apps),  B condition and why
-In order to prepare the data for our tasks, we identified websites that people commonly used for selecting universities and restaurants.  Once we had compiled the list of websites, we select the top most used six for each task.  We selected six because it enable us to scope our study, we found through two pilot studies that six data sources provided a sufficient challenge for users to explore the data and required them to use DP's main features.  We manually collected the data from the nine selected websites into JSON files, and converted them to Microsoft Excel worksheets (which 40\% of the participants in PS.1 said that had previously used to compare data).
+In order to prepare the data for our tasks, we identified websites that people commonly used for selecting universities and restaurants.  Once we had compiled the list of websites, we select the top most used six for each task.  We selected six because it enable us to scope our study, we found through two pilot studies that six data sources provided a sufficient challenge for users to explore the data and required them to use DP's main features. We manually collected the key data points from the websites for use in DP and into Excel spreadsheets (which 40\% of the participants in PS.1 said that had previously used to compare data).
 
 % why was the B condition set up this way? What did we seek to achieve?
-The control (B) conditions were in a prepared Mac comprised of a web browser pre-loaded with a page with links to four live web sites, and an open instance of Excel with a workbook open containing spreadsheet versions of the same data as were loaded into DP for the A condition versions of the same tasks.  Other Office applications were also available for use and participants were allowed to visit other sites than the pre-specified ones.  The purpose of this condition was to understand how people using standard desktop office software.
+In the control condition the participants were given the source web site URLs, as well as a spreadsheet containing the data taken from those web sites (the same data loaded into DP for condition A). Participants were free to use the web sites and spreadsheets however they wished.
+%The control (B) conditions were in a prepared Mac comprised of a web browser pre-loaded with a page with links to four live web sites, and an open instance of Excel with a workbook open containing spreadsheet versions of the same data as were loaded into DP for the A condition versions of the same tasks.  Other Office applications were also available for use and participants were allowed to visit other sites than the pre-specified ones.  The purpose of this condition was to understand how people using standard desktop office software.
 
 \subsection{Data Collection and Analysis}
 Each study was overseen by a facilitator and an observer:  the role of the facilitator was to explain the study's protocol to the participant and to answer any questions; and the role of the observer was to observe without interacting with the user, and to take notes.  Both the facilitator and observer were trained on the purpose of the study, their role and how they could and couldn't influence the study.   Explicitly both the facilitator and observer where trained in identifying processes that people used during a task, so that they could thematically categorise them.  Initially, we identified the following themes: organisation of data, eliminating candidates, co-referencing, and visualisations. The studies were run over 4 days.  At the end of each day the facilitators and observers met to discuss the studies' data and to revisit protocols, if necessary.  During the lab study, we recorded the audio and the participant's actions on screen. We asked the participants to follow a \emph{think-aloud} protocol as they worked, so that we could understand the reasoning behind their actions.  At the end of the study, the participant completed an exit survey.
