--- a/chi2012.tex
+++ b/chi2012.tex
@@ -648,9 +648,9 @@ Our study had several limitations.  First, the small sample size of our study (2
 
 \section{Conclusions} %Key findings of the whole paper and its implications
 
-Just as the wise Italian in Voltaire's poem \emph{La Begueule} predicted,``the best is the enemy of the good'', we believe that the quest for complete approaches to data integration have perhaps caused more scruffy, ``ad-hoc'' approaches to be overlooked.  Based upon the results of our investigation, we see a number of benefits to user-driven data reconciliation approaches over automatic and bespoke ones.  Specifically, letting the user freely merge and split data as part of his or her sensemaking process, gives users the power to see data combined or split up as best suited to the task
+Just as the wise Italian in Voltaire's poem \emph{La Begueule} said that ``the best is the enemy of the good'', we believe that complete approaches to data integration have perhaps caused less principled, ``ad-hoc'' approaches to be overlooked.  Based upon the results of our investigation, we see a number of benefits to lightweight, user-driven approaches to coping with heterogeneity over automatic and bespoke ones. Just as the \emph{user-subjective approach} to PIM \cite{user-subjective} showed that subjective labels and attributes were more useful than physical ones for files and folders, a user-controlled approach to data integration, where data may be combined (and separated) at will may benefit the sensemaking or decision-making process.   Towards this end, our results of our pre-studies and DataPalette show that, for a majority of the kinds of structured data feeds available on the Web today, the kinds of heterogeneity can be largely managed using simple interactive approaches that are intuitive and preceived as useful by end-users. 
 
- things as simple as coreference involved any subjective judgement, 
+%%  things as simple as coreference involved any subjective judgement, 
 
 %% the abililty to  In our investigation we found that complete approaches to data integration
 
@@ -659,7 +659,7 @@ Just as the wise Italian in Voltaire's poem \emph{La Begueule} predicted,``the b
 %% In this paper, we take the position that there is a need for a difference in focus between the approaches taken to data integration between the approaches taken in database integration and that of PIM, because of vast differences in requirements.  In database systems, the overall objective is usually to allow multiple large databases to be accessed as if one. This requires essentially full mapping of all data types and objects and well-defined semantics concerning where and how data gets converted. The upfront costs of such complete integration are typically high, but are typically justified in the long-term, high-volume use cases imagined. In typical sense-making scenarios of PIM, however, people might need to combine information from multiple sources for a one-off task; meaning that any upfront cost would directly impact the time and effort a person has allocated for their task.  Moreover, while a fully, uniform query capability might be nice, such capability is likely of less overall importance for a single quick task than simply being able to quickly and easily identify and cope with differences.
 % Just as journalism became peer-produced with the explosion of blogging, data journalism is on the brink of moving from skilled data analysts the likes of The Guardian Datablog staff\footnote{Guardian Datablog - \url{http://www.guardian.co.uk/news/datablog}} into the hands of the ordinary citizen \cite{datajournalismhandbook}.  In order for this to happen, however, tools that allow people to effectively combine data more effectively than current structured PIM tools and generic spreadsheet tools will become increasingly important. 
 
-Just as journalism became peer-produced with the explosion of blogging, data journalism is on the brink of moving from skilled data analysts the likes of The Guardian Datablog staff\footnote{Guardian Datablog - \url{http://www.guardian.co.uk/news/datablog}} into the hands of the ordinary citizen \footnote{Data Journalism Hand Book: \url{datajournalismhandbook.org}}.  In order for this to happen, however, tools that allow people to effectively combine data more effectively than current structured PIM tools and generic spreadsheet tools will become increasingly important. 
+%% Just as journalism became peer-produced with the explosion of blogging, data journalism is on the brink of moving from skilled data analysts the likes of The Guardian Datablog staff\footnote{Guardian Datablog - \url{http://www.guardian.co.uk/news/datablog}} into the hands of the ordinary citizen \footnote{Data Journalism Hand Book: \url{datajournalismhandbook.org}}.  In order for this to happen, however, tools that allow people to effectively combine data more effectively than current structured PIM tools and generic spreadsheet tools will become increasingly important. 
 
 %% \section{Acknowledgments}
 
