--- a/chi2012.tex
+++ b/chi2012.tex
@@ -652,7 +652,10 @@ Our study had several limitations.  First, the small sample size of our study (2
 
 \section{Conclusions} %Key findings of the whole paper and its implications
 
-Just as the Italian in Voltaire's poem \emph{La Begueule} said ``the best is the enemy of the good'', we believe that complete approaches to data integration have perhaps caused less principled, ``ad-hoc'' approaches to be overlooked.  Based upon the results of our investigation, we see a number of benefits to lightweight, user-driven approaches to coping with heterogeneity over automatic and bespoke ones. Just as the \emph{user-subjective approach} to PIM \cite{user-subjective} showed that subjective labels and attributes were more useful than physical ones for files and folders, a user-controlled approach to data integration, where data may be combined (and separated) at will may benefit the sensemaking or decision-making process.   Towards this end, our results of our pre-studies and DataPalette show that, for a majority of the kinds of structured data feeds available on the Web today, the kinds of heterogeneity can be largely managed using simple interactive approaches that are intuitive and preceived as useful by end-users. 
+As said by the Italian in Voltaire's poem \emph{La Begueule}, ``the best is the enemy of the good'', we believe that the quest for complete approaches to data integration have, perhaps, caused less-principled, ``ad-hoc'' approaches to be overlooked.  Based upon the results of our investigation, however, we see a number of benefits to lightweight, user-driven, interactive approaches over automatic and bespoke ones. Just as the \emph{user-subjective approach} to PIM \cite{user-subjective} showed that subjective attributes and labels were more useful than physical ones, we have shown that a user-driven approach to data integration, as achieved with DataPalette, affords users flexibility to combine and keep separate data at will, and may facilitate decision-making tasks.  Moreover, through our pre-studies and DataPalette evaluation, we have shown that much of heterogeneity exhibited by structured data feeds available on the Web today can be managed reasonably through simple, fast interactive approaches that are received as intuitive by end-users. 
+
+
+%% Just as the Italian in Voltaire's poem \emph{La Begueule} said ``the best is the enemy of the good'', we believe that the quest for complete approaches to data integration have perhaps caused less principled, ``ad-hoc'' approaches to be overlooked.  Based upon the results of our investigation, we see a number of benefits to lightweight, user-driven approaches to coping with heterogeneity over automatic and bespoke ones. Just as the \emph{user-subjective approach} to PIM \cite{user-subjective} showed that subjective labels and attributes were more useful than physical ones for files and folders, a user-controlled approach to data integration, where data may be combined (and separated) at will may benefit the sensemaking or decision-making process.   Towards this end, our results of our pre-studies and DataPalette show that, for a majority of the kinds of structured data feeds available on the Web today, the kinds of heterogeneity can be largely managed using simple interactive approaches that are intuitive and preceived as useful by end-users. 
 
 %%  things as simple as coreference involved any subjective judgement, 
 
