--- a/carpedata.bib
+++ b/carpedata.bib
@@ -38,15 +38,6 @@
 }
 
 @misc{haystack,
-    abstract = {{The Resource Definition Framework (RDF) is designed to support
-agent communication on the Web, but it is also suitable as a
-framework for modeling and storing individual users'
-information. By using RDF in this manner, our Haystack platform
-provides information management capabilities personalized to
-individual users. This flexible semi-structured data model is
-appealing for several reasons. First, RDF supports ontologies
-created by the user and tailored to the user's needs. At the same
-time,...}},
     author = {Huynh, D. and Karger, D. and Quan, D.},
     citeulike-article-id = {326807},
     citeulike-linkout-0 = {http://citeseerx.ist.psu.edu/viewdoc/summary?doi=10.1.1.19.846},
@@ -62,12 +53,7 @@ time,...}},
     address = {New York, NY, USA},
     author = {Cai, Yuhan and Dong, Xin L. and Halevy, Alon and Liu, Jing M. and Madhavan, Jayant},
     booktitle = {SIGMOD '05: Proceedings of the 2005 ACM SIGMOD international conference on Management of data},
-    citeulike-article-id = {318989},
-    citeulike-linkout-0 = {http://portal.acm.org/citation.cfm?id=1066289},
-    citeulike-linkout-1 = {http://dx.doi.org/10.1145/1066157.1066289},
-    doi = {10.1145/1066157.1066289},
     isbn = {1595930604},
-    keywords = {info-management, multiplatform, pim, tool-support},
     pages = {921--923},
     posted-at = {2005-10-11 23:07:48},
     priority = {5},
@@ -86,12 +72,7 @@ time,...}},
     address = {New York, NY, USA},
     author = {Cai, Yuhan and Dong, Xin L. and Halevy, Alon and Liu, Jing M. and Madhavan, Jayant},
     booktitle = {SIGMOD '05: Proceedings of the 2005 ACM SIGMOD international conference on Management of data},
-    doi = {10.1145/1066157.1066289},
-    isbn = {1595930604},
-    keywords = {info-management, multiplatform, pim, tool-support},
     pages = {921--923},
-    posted-at = {2005-10-11 23:07:48},
-    priority = {5},
     publisher = {ACM Press},
     title = {{Personal information management with SEMEX}},
     year = {2005}
@@ -136,11 +117,9 @@ time,...}},
  location = {Vancouver, BC, Canada},
  pages = {915--924},
  numpages = {10},
- doi = {10.1145/1978942.1979078},
  acmid = {1979078},
  publisher = {ACM},
  address = {New York, NY, USA},
- keywords = {NPO, homebrew databases, information management, nonprofit, volunteer coordination, volunteer management.},
 }
 
 @article{euzenat2004api,
@@ -219,19 +198,12 @@ time,...}},
 
 @article{citeulike:3875264,
     author = {Huynh, D. and Miller, R. and Karger, D.},
-    citeulike-article-id = {3875264},
-    citeulike-linkout-0 = {http://dx.doi.org/10.1016/j.websem.2008.09.005},
-    doi = {10.1016/j.websem.2008.09.005},
     issn = {15708268},
     journal = {Web Semantics: Science, Services and Agents on the World Wide Web},
     keywords = {semantic, web\_20},
-    month = nov,
     number = {4},
     pages = {274--282},
-    posted-at = {2009-04-29 08:41:33},
-    priority = {2},
     title = {{Potluck: Data mash-up tool for casual users}},
-    url = {http://dx.doi.org/10.1016/j.websem.2008.09.005},
     volume = {6},
     year = {2008}
 }
@@ -245,12 +217,8 @@ time,...}},
  location = {Newport, Rhode Island, USA},
  pages = {61--70},
  numpages = {10},
- url = {http://doi.acm.org/10.1145/1294211.1294224},
- doi = {10.1145/1294211.1294224},
  acmid = {1294224},
- publisher = {ACM},
- address = {New York, NY, USA},
- keywords = {personalized web search, template-based representation, view and layout editing, web content extraction},
+ publisher = {ACM}
 } 
 
 @article{Shadbolt:2006:SWR:1155313.1155373,
@@ -260,17 +228,13 @@ time,...}},
  issue_date = {May 2006},
  volume = {21},
  number = {3},
- month = may,
  year = {2006},
  issn = {1541-1672},
  pages = {96--101},
  numpages = {6},
- url = {http://dx.doi.org/10.1109/MIS.2006.62},
- doi = {10.1109/MIS.2006.62},
  acmid = {1155373},
  publisher = {IEEE Educational Activities Department},
- address = {Piscataway, NJ, USA},
- keywords = {Semantic Web, Semantic Web, semantic networks, standards, e-science, Web services, Web services, e-science, semantic networks, standards},
+ address = {Piscataway, NJ, USA}
 } 
 @article{george2005understanding,
   title={Understanding structural and semantic heterogeneity in the context of database schema integration},
@@ -281,8 +245,7 @@ time,...}},
   title={{Parallax and companion: Set-based browsing for the data web}},
   author={Huynh, D.F. and Karger, D.},
   booktitle={WWW Conference. ACM},
-  year={2009},
-  organization={Citeseer}
+  year={2009}
 }
 
 @article{alani2007unlocking,
