--- a/carpedata.bib
+++ b/carpedata.bib
@@ -4,8 +4,7 @@
   journal={Human mental workload},
   volume={1},
   pages={139--183},
-  year={1988},
-  publisher={Amsterdam, Holland}
+  year={1988}
 }
 
 @ARTICLE{user-subjective,
@@ -24,42 +23,28 @@
   volume={1},
   number={1},
   pages={5},
-  year={2007},
-  publisher={ACM}
+  year={2007}
 }
 
 @inproceedings{halevy2006data,
   title={Data integration: the teenage years},
   author={Halevy, A. and Rajaraman, A. and Ordille, J.},
-  booktitle={Proceedings of the 32nd international conference on Very large data bases},
+  booktitle={VLDB},
   pages={9--16},
-  year={2006},
-  organization={VLDB Endowment}
+  year={2006}
 }
 
 @misc{haystack,
     author = {Huynh, D. and Karger, D. and Quan, D.},
-    citeulike-article-id = {326807},
-    citeulike-linkout-0 = {http://citeseerx.ist.psu.edu/viewdoc/summary?doi=10.1.1.19.846},
-    keywords = {knowledge, kr, rdf, representation},
-    posted-at = {2006-11-06 16:34:37},
-    priority = {0},
     title = {{Haystack: A Platform for Creating, Organizing and Visualizing In-formation Using RDF}},
-    url = {http://citeseerx.ist.psu.edu/viewdoc/summary?doi=10.1.1.19.846},
     year = {2002}
 }
 
 @inproceedings{semex,
-    address = {New York, NY, USA},
     author = {Cai, Yuhan and Dong, Xin L. and Halevy, Alon and Liu, Jing M. and Madhavan, Jayant},
-    booktitle = {SIGMOD '05: Proceedings of the 2005 ACM SIGMOD international conference on Management of data},
-    isbn = {1595930604},
+    booktitle = {SIGMOD '05},
     pages = {921--923},
-    posted-at = {2005-10-11 23:07:48},
-    priority = {5},
-    publisher = {ACM Press},
     title = {{Personal information management with SEMEX}},
-    url = {http://dx.doi.org/10.1145/1066157.1066289},
     year = {2005}
 }
 
@@ -68,56 +53,36 @@
     title = {{Towards a unification and integration of PIM support}},
     year = {2005}
 }
-@inproceedings{semex-2,
-    address = {New York, NY, USA},
-    author = {Cai, Yuhan and Dong, Xin L. and Halevy, Alon and Liu, Jing M. and Madhavan, Jayant},
-    booktitle = {SIGMOD '05: Proceedings of the 2005 ACM SIGMOD international conference on Management of data},
-    pages = {921--923},
-    publisher = {ACM Press},
-    title = {{Personal information management with SEMEX}},
-    year = {2005}
-}
 @inproceedings{bergman,
  author = {Bergman, Ofer and Beyth-Marom, Ruth and Nachmias, Rafi},
  title = {The project fragmentation problem in personal information management},
- booktitle = {Proceedings of the SIGCHI conference on Human Factors in computing systems},
- series = {CHI '06},
+ series = {Proc. CHI '06},
  year = {2006},
  isbn = {1-59593-372-7},
  location = {Montr\'{e}al, Qu\'{e}bec, Canada},
- pages = {271--274},
- numpages = {4},
- acmid = {1124813},
- publisher = {ACM},
- address = {New York, NY, USA}
+ pages = {271--274}
 }
 
 @inproceedings{boardmansasse,
  author = {Boardman, Richard and Sasse, M. Angela},
  title = {Stuff goes into the computer and doesn't come out: a cross-tool study of personal information management},
  booktitle = {Proc. CHI '04},
- publisher = {ACM Press},
  year = {2004},
 }
 @INPROCEEDINGS{boardman,
     author = {Richard Boardman and Robert Spence and M. Angela Sasse},
     title = {{Too Many Hierarchies? The Daily Struggle for Control of the Workspace}},
-    booktitle = {Mathematical Models, Proceedings of the ACM CHI96 Conference},
+    booktitle = {Proc. CHI '96},
     year = {2003},
     pages = {406--412},
-    publisher = {ACM Press}
 }
 @inproceedings{Voida:2011:HDC:1978942.1979078,
  author = {Voida, Amy and Harmon, Ellie and Al-Ani, Ban},
  title = {Homebrew databases: complexities of everyday information management in nonprofit organizations},
- booktitle = {Proceedings of the 2011 annual conference on Human factors in computing systems},
- series = {CHI '11},
+ series = {Proc. CHI '11},
  year = {2011},
  isbn = {978-1-4503-0228-9},
- location = {Vancouver, BC, Canada},
  pages = {915--924},
- numpages = {10},
- acmid = {1979078},
  publisher = {ACM},
  address = {New York, NY, USA},
 }
@@ -127,8 +92,7 @@
  author={Euzenat, J.},
  journal={The Semantic Web--ISWC 2004},
  pages={698--712},
- year={2004},
- publisher={Springer}
+ year={2004}
 }
 
 @article{doan2003learning,
@@ -138,8 +102,7 @@
  volume={12},
  number={4},
  pages={303--319},
- year={2003},
- publisher={Springer}
+ year={2003}
 }
 
 @article{castano2006matching,
@@ -148,7 +111,6 @@
  journal={Journal on Data Semantics V},
  pages={25--63},
  year={2006},
- publisher={Springer}
 }
 
 @article{gu2003record,
@@ -165,7 +127,6 @@
  author={Winkler, W.E.},
  booktitle={Statistical Research Division, US Census Bureau},
  year={1999},
- organization={Citeseer}
 }
 
 @article{fellegi1969theory,
@@ -193,14 +154,12 @@
  number={3},
  pages={157--168},
  year={2011},
- publisher={VLDB Endowment}
 }
 
 @article{citeulike:3875264,
     author = {Huynh, D. and Miller, R. and Karger, D.},
     issn = {15708268},
     journal = {Web Semantics: Science, Services and Agents on the World Wide Web},
-    keywords = {semantic, web\_20},
     number = {4},
     pages = {274--282},
     title = {{Potluck: Data mash-up tool for casual users}},
@@ -209,32 +168,21 @@
 }
 @inproceedings{Dontcheva:2007:RCS:1294211.1294224,
  author = {Dontcheva, Mira and Drucker, Steven M. and Salesin, David and Cohen, Michael F.},
- title = {Relations, cards, and search templates: user-guided web data integration and layout},
- booktitle = {Proceedings of the 20th annual ACM symposium on User interface software and technology},
- series = {UIST '07},
+ title = {{Relations, cards, and search templates: user-guided web data integration and layout}},
+ booktitle = {Proc. UIST '07},
  year = {2007},
  isbn = {978-1-59593-679-0},
- location = {Newport, Rhode Island, USA},
  pages = {61--70},
- numpages = {10},
- acmid = {1294224},
- publisher = {ACM}
 } 
 
 @article{Shadbolt:2006:SWR:1155313.1155373,
  author = {Shadbolt, Nigel and Berners-Lee, Tim and Hall, Wendy},
  title = {{The Semantic Web Revisited}},
  journal = {IEEE Intelligent Systems},
- issue_date = {May 2006},
  volume = {21},
  number = {3},
  year = {2006},
- issn = {1541-1672},
  pages = {96--101},
- numpages = {6},
- acmid = {1155373},
- publisher = {IEEE Educational Activities Department},
- address = {Piscataway, NJ, USA}
 } 
 @article{george2005understanding,
   title={Understanding structural and semantic heterogeneity in the context of database schema integration},
@@ -244,7 +192,7 @@
 @inproceedings{parallax,
   title={{Parallax and companion: Set-based browsing for the data web}},
   author={Huynh, D.F. and Karger, D.},
-  booktitle={WWW Conference. ACM},
+  booktitle={WWW Conference},
   year={2009}
 }
 
@@ -254,18 +202,16 @@
   journal={The Semantic Web},
   pages={708--721},
   year={2007},
-  publisher={Springer}
 }
 
 @article{infoscraps,
   title={Information scraps: How and why information eludes our personal information management tools},
   author={Bernstein, M. and Van Kleek, M. and Karger, D. and Schraefel, MC},
-  journal={ACM Transactions on Information Systems (TOIS)},
+  journal={TOIS},
   volume={26},
   number={4},
   pages={24},
   year={2008},
-  publisher={acm}
 }
 
 @article{intel_mashmaker,
@@ -274,9 +220,6 @@
   journal = {SIGMOD Rec.},
   volume = {36},
   number = {4},
-  month = dec,
   year = {2007},
   pages = {27--33},
-  numpages = {7},
-  publisher = {ACM},
 } 
